ci: fix brew formula install path

--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -207,7 +207,11 @@ jobs:
             end
 
             def install
-              bin.install Dir["*/water"]
+              if File.exist?("water")
+                bin.install "water"
+              else
+                bin.install Dir["*/water"]
+              end
             end
           end
           EOF
