--- a/components/form/Cargo.toml
+++ b/components/form/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
-readme.workspace = true
+readme = "README.md"
 repository.workspace = true
 description = "Form components for WaterUI (inputs, buttons, validation)"
 keywords = ["form", "input", "validation", "ui", "components"]
