--- a/components/media/Cargo.toml
+++ b/components/media/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
-readme.workspace = true
+readme = "README.md"
 repository.workspace = true
 description = "Media components for WaterUI (images, videos, audio)"
 keywords = ["media", "image", "video", "ui", "components"]
