--- a/components/navigation/Cargo.toml
+++ b/components/navigation/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
-readme.workspace = true
+readme = "README.md"
 repository.workspace = true
 description = "Navigation components for WaterUI"
 keywords = ["navigation", "ui", "components", "menu"]
