--- a/components/text/Cargo.toml
+++ b/components/text/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.1"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
-readme.workspace = true
+readme = "README.md"
 repository.workspace = true
 description = "Text and typography components for WaterUI"
 keywords = ["text", "typography", "ui", "components"]
