--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
-readme.workspace = true
+readme = "README.md"
 repository.workspace = true
 rust-version.workspace = true
 description = "FFI bindings for the WaterUI cross-platform UI framework"
