--- a/utils/url/Cargo.toml
+++ b/utils/url/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 authors.workspace = true
 rust-version.workspace = true
 license.workspace = true
-readme.workspace = true
+readme = "README.md"
 repository.workspace = true
 description.workspace = true
 keywords.workspace = true
