--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -35,6 +35,8 @@ raw-window-handle = "0.6"
 
 [target.'cfg(target_os = "android")'.dependencies]
 tracing-android = "0.2"
+ndk-context = "0.1.1"
+jni = "0.21.1"
 
 [target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
 tracing-oslog = "0.3"
